# PFA

./: .gitignore  build-envr-yocto  meta-bbb-automotive
Qt_app/: CMakeLists.txt  IndicatorIcon.qml  Main.qml.autosave  backend.h  i2c_handler.cpp
Test/: backend.cpp
conf/: bblayers.conf  layer.conf  local.conf
meta-bbb-automotive/: README  Socket_Injector.py
meta-bbb-automotive/Qt_app/: Speedometer.qml
meta-bbb-automotive/recipes-apps/automotive-dashboard-pro/files/: RpmGauge.qml  backend.cpp  gpio_handler.cpp  main.cpp
meta-bbb-automotive/recipes-apps/dashboard/: dashboard_0.1.bb
meta-bbb-automotive/recipes-apps/dashboard/files/: CMakeLists.txt  Speedometer.qml
meta-bbb-automotive/recipes-connectivity/usb-gadget/files/: usb-gadget.conf  usb-gadget.service
meta-bbb-automotive/recipes-core/systemd/files/: sim-script.service
meta-bbb-automotive/recipes-devtools/sim-script/: python-simulator-script_0.1.bb
meta-bbb-automotive/recipes-devtools/sim-script/files/: simulator.py
recipes-apps/automotive-dashboard-pro/: automotive-dashboard-new_0.1.bb
recipes-apps/automotive-dashboard-pro/files/: i2c_handler.h
recipes-apps/dashboard/files/: IndicatorIcon.qml  Main.qml  RpmGauge.qml  gpio_handler.h
recipes-connectivity/usb-gadget/: usb-gadget_0.1.bb
recipes-connectivity/usb-gadget/files/: usb-gadget.sh
recipes-core/systemd/: dashboard-service_0.1.bb
recipes-core/systemd/files/: dashboard.service
recipes-kernel/linux/: linux-yocto_%.bbappend
recipes-kernel/linux/beaglebone-yocto/: usb-gadget.cfg
